# tauri-todo-mcp

./: .gitmodules  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.module.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mcp.rs
