[package]
name = "tauri-todo-mcp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_todo_mcp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
chrono = "0.4.40"
mcp-server = { path = "../rust-sdk/crates/mcp-server" }
mcp-core = { path = "../rust-sdk/crates/mcp-core" }
tokio = { version = "1", features = ["io-util", "io-std"] }
anyhow = "1.0"
futures = "0.3"
tauri-plugin-single-instance = "2"
